# company-skills

./: .gitignore  .mise.toml  CLAUDE.md  LICENSE  PUBLISHING.md  README.md
context/: image-processing.md
skills/bewirtungsbeleg/: .gitignore  SKILL.md  config.example.yml  pyproject.toml
skills/bewirtungsbeleg/references/: steuerliche_anforderungen.md
skills/bewirtungsbeleg/scripts/: create_bewirtungsbeleg.py
