[project]
name = "bewirtungsbeleg"
version = "1.0.0"
description = "German tax-compliant entertainment expense receipt generator"
requires-python = ">=3.8"
dependencies = [
    "pillow>=10.0.0",
    "reportlab>=4.0.0",
    "pypdf>=3.17.0",
    "pyyaml>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["scripts"]
